@@ -616,6 +616,9 @@ bool FormMain::RunTests( bool fullTest, bool interactive )
         dt2.SetYear(dt2.GetYear()-10);
 #endif
 
+        wxColour colWithAlpha(1, 128, 254, 100);
+        wxString colWithAlphaStr(colWithAlpha.GetAsString(wxC2S_CSS_SYNTAX));
+
 #define FLAG_TEST_SET1 (wxCAPTION|wxCLOSE_BOX|wxSYSTEM_MENU|wxRESIZE_BORDER)
 #define FLAG_TEST_SET2 (wxSTAY_ON_TOP|wxCAPTION|wxICONIZE|wxSYSTEM_MENU)
 
@@ -761,6 +764,15 @@ bool FormMain::RunTests( bool fullTest, bool interactive )
         pgman->SetPropertyValueString("ColourProperty", "#FE860B");
         col << pgman->GetPropertyValue("ColourProperty");
         if ( col != wxColour(254, 134, 11) )
+            RT_FAILURE();
+
+        pgman->SetPropertyValueString("ColourPropertyWithAlpha",
+                                      "(10, 20, 30, 128)");
+        col << pgman->GetPropertyValue("ColourPropertyWithAlpha");
+        if ( col != wxColour(10, 20, 30, 128) )
+            RT_FAILURE();
+        if ( pgman->GetPropertyValueAsString("ColourPropertyWithAlpha")
+                != "(10,20,30,128)" )
             RT_FAILURE();
     }
 
