@@ -451,6 +451,7 @@ All (GUI):
 - Added wxImage::Rotate180() (Jeff Tupper).
 - Added support for saving TGA files.
 - Added wxArtProvider returning higher quality icons from Tango project.
+- wxPropertyGrid: Added "HasAlpha" attribute for wxColourProperty.
 
 GTK:
 
